--- a/unit_1/CSS/style.css
+++ b/unit_1/CSS/style.css
@@ -1,6 +1,7 @@
-body{background-color: teal;
-}
+body {
+	background-color: teal;
+} 
 
-h1,p{
-	color: white;
-}
+h1,p {
+	color:white;
+}                            
