--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -8,7 +8,8 @@
 
 h1 {
 	font-family: 'Lato', sans-serif;
-	font-weight: 900 italic;
+	font-weight: 900;
+	font-style: italic;
 	border: 1px black solid;
     padding: 20px;
     display: center;
@@ -30,7 +31,7 @@ figure {
 	width:320px;
     background-color: #FFE2B8;
     border: 1px black solid;
-    padding: 20px;
+    padding: 10px;
     float: left;
     position: relative;
 }
