--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -17,9 +17,11 @@ h1 {
     font-size: 1em;
     font-weight: 700;
     font-style: italic;
+    position: relative;
     padding: .5em;
     margin: auto;
-    letter-spacing: 0.8em;
+    letter-spacing: 0.15em;
+    text-align: center;
 }
 
 h2 {
@@ -27,9 +29,11 @@ h2 {
     font-weight: 900;
     font-style: italic;
     padding: .5em;
-    margin: 0 6em 0 6em;
+    margin: auto;
     font-size: 2.5em;
     color: #000;
+    letter-spacing: .1em;
+    text-align: center;
 }
 
 p {
@@ -38,7 +42,7 @@ p {
 }
 
 figure {
-    width: 382px;
+    width: 28%;
     margin: 0.76em;
     border: .01em black solid;
     padding: .5em;
@@ -53,17 +57,18 @@ figure img {
 } 
 
 figcaption {
-	position: absolute;
-	top:155px;
-	left:0;
-	width:100%;
-	color: #000;
-	font-family: 'Lato', sans-serif;
-	font-size: 2em;
-	font-height: 150%;
-	font-weight:400;
-	text-align:center;
-	display: none;
+    position: absolute;
+    top: 42%;
+    left: 0;
+    width: 100%;
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    font-size: 2%;
+    font-height: 150%;
+    font-weight: 400;
+    text-align: center;
+    display: none;
+    z-index: 3;
 }
 
 figure:hover > figcaption{
@@ -72,7 +77,7 @@ figure:hover > figcaption{
 }
 
 footer 	{
-	padding: 20px;
+	padding: 1em;
 	color: #000;
 	font-family: 'Josefin', sans-serif;
 	font-size: .75em;
@@ -103,13 +108,7 @@ a:hover {
 	opacity: 0.4;
 }
 
-.crop {
-	height: 367px;
-	overflow: hidden;
+#figure-wrap {
+    padding: 1% 0% 1% 9%;
+    position: relative;
 }
-
-#figure-wrap{
-	border: 1px black solid;
-	padding: 20px;
-}
-
