--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -66,8 +66,8 @@ figcaption {
     width: 100%;
     color: #000;
     font-family: 'Lato', sans-serif;
-    font-size: 2%;
-    font-height: 150%;
+    font-size: 2em;
+    line-height: 150%;
     font-weight: 400;
     text-align: center;
     display: none;
@@ -76,7 +76,6 @@ figcaption {
 
 figure:hover > figcaption{
     display: block;
-    font-size: 2em;
 }
 
 footer  {
@@ -146,7 +145,21 @@ a:hover {
         padding: .5em;
         float: left;
         position: relative;
-}
+    }
+
+    figure img{
+        opacity:0.7;
+    }
+
+    figcaption {
+        display: block;
+    }
+
+    .imgContainer:hover img{
+    opacity: auto;
+    }
+
+
 }
 
 @media only screen and (max-width: 870px) {
