changes to responsive design

--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -13,6 +13,7 @@ body {
     font-size: 20px;
     line-height: 1.5em;
 }
+
 h1 {
     font-size: 1em;
     font-weight: 700;
@@ -29,12 +30,12 @@ h2 {
     font-family: 'Life Savers', cursive;
     font-weight: 900;
     font-style: italic;
-    padding: .5em;
+    padding: 0.4em;
     width: 100%;
     margin: auto;
     font-size: 2.5em;
     color: #000;
-    letter-spacing: .1em;
+    letter-spacing: .05em;
     text-align: center;
 }
 
@@ -117,10 +118,16 @@ a:hover {
     background: #fff;
 }
 
-#figure-wrap {
+/*#figure-wrap {
     width: 100%;
     margin: auto;
     background: #fff;
+}*/
+
+#body-wrap {
+    width: 980px;
+    margin: auto;
+    background: none #fff;
 }
 
 #head-wrap {
@@ -128,45 +135,61 @@ a:hover {
     background: #fff;
 }
 
-#body-wrap {
+/*#body-wrap {
     width: 100%;
     background: #fff;
-}
+}*/
 
 #foot-wrap {
     width:100%;
     background: #fff;
 }
 
-@media only screen and (max-width: 999px) {
-    figure {
-        width: 50%;
+@media only screen and (max-width: 1000px) {
+     h2 {
+        font-size: 2em;
+        font-weight: 900;
+        letter-spacing: .05em;
     }
 
-    figure img{
-        opacity:0.7;
-    }
-
-    figcaption {
-        display: block;
-    }
-
-    .imgContainer:hover img{
-    opacity: auto;
-    }
-
+    #body-wrap {
+        width: 850px;
+}
 
 }
 
 @media only screen and (max-width: 870px) {
+        h1 {
+            display: none;
+        }
+        
         h2 {
-            font-size: 2em;
+            padding: .5em;
+            font-size: 1.4em;
+            letter-spacing: .1em;
+        }
+        
+        figure img {
+            opacity:0.7;
+        }
+
+        figcaption {
+            display: block;
+            font-size: 1.3em;
+        }
+
+        #body-wrap {
+            width: 680px;
+        }
+
+        .imgContainer:hover img{
+            opacity: auto;
         }
 }
 
 @media only screen and (max-width:700px) {
         h1 {
-            font-size: .9em;
+            font-size: .8em;
             padding: .2em;
             width: 100%;
             letter-spacing: 0.15em;
@@ -178,22 +201,27 @@ a:hover {
             letter-spacing: .1em;
         }
 
-        .wrap {
-            width: 100%;
+        figure {
+            width: 50%;
+        }
+
+        figure img {
+            opacity:0.7;
+        }
+
+        figcaption {
+            display: block;
+            font-size: 1.5em;
+        }
+
+        #body-wrap {
+            width: 520px;
         }
 }
 
-@media only screen and (max-width:520px) {
+@media only screen and (max-width:560px) {
         h1 {
-            font-size: .9em;
-            font-weight: 700;
-            font-style: italic;
-            position: relative;
-            padding: .2em;
-            width: 100%;
-            margin: auto;
-            letter-spacing: 0.15em;
-            text-align: center;
+            display:none;
         }
 
         h2 {
@@ -206,8 +234,13 @@ a:hover {
             width: 100%;
         }
 
-        /*.wrap {
-            width: 100%;
-        }*/
+        figcaption {
+        font-size: 2em;
+    }
+
+        #body-wrap {
+            width: 400px;
+        }
 }
+
 
